# robobet

./: AUTHORS  COPYING  Makefile.am  NEWS  README  README.md  configure.ac
src/: Makefile.am  bet.cpp  bet.hpp  bet_option.cpp  bet_option.hpp  bet_xml_parser.cpp  bet_xml_parser.hpp  game.cpp  game.hpp  game_event.hpp  handicap_bet.cpp  handicap_bet.hpp  howmany_bet.cpp  howmany_bet.hpp  interval.cpp  interval.hpp  legacy_types.hpp  main.cpp  match.cpp  match.hpp  match_data.hpp  menu.hpp  menu_handler.hpp  message_listener.cpp  message_listener.hpp  message_parser.cpp  message_parser.hpp  more_bet.cpp  more_bet.hpp  parser.hpp  robobet  text_resolver.cpp  text_resolver.hpp  version.hpp  when_bet.cpp  when_bet.hpp  who_bet.cpp  who_bet.hpp
xml/: bets.dtd  bets.xml
